# py_rgb

./: .gitignore  pyproject.toml
app/: main.py
app/core/: color_picker.py  get_devices.py  get_info.py  temp_load_mode.py
